--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "waqt",
+  "productName": "Waqt",
   "version": "1.0.0",
   "description": "View Islamic prayer times for a specified location",
-  "homepage": "https://github.com/arafatamim/waqt",
+  "homepage": "https://arafatamim.github.io/projets/waqt",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/arafatamim/waqt"
+  },
   "main": "main.js",
   "scripts": {
     "start": "electron .",
@@ -16,7 +21,8 @@
     "appId": "com.tamim.waqt",
     "linux": {
       "target": [
-        "AppImage"
+        "AppImage",
+        "deb"
       ],
       "icon": "build/icon.png",
       "category": "utility"
@@ -26,11 +32,10 @@
     }
   },
   "dependencies": {
-    "electron-store": "^1.3.0",
-    "npm": "^6.0.0"
+    "electron-store": "^2.0.0"
   },
   "devDependencies": {
-    "electron": "^2.0.0",
-    "electron-builder": "^20.11.1"
+    "electron-builder": "^20.15.1",
+    "electron-reloader": "^0.2.0"
   }
 }
